<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E0E0E"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_medicine"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/medicine"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_medicine"
            android:inputType="text"
            android:autofillHints="autofillHintName"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_text_color"
            android:background="#34475153"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/dosage_type"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/form_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="8dp"
            android:background="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/quantities"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/quantity_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_quantity"
            android:inputType="number"
            android:autofillHints="autofillHintQuantity"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_text_color"
            android:background="#34475153"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/frequency"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <Spinner
            android:id="@+id/frequency_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="8dp"
            android:background="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/what_time"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <TimePicker
            android:id="@+id/time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:minHeight="48dp"
            android:padding="8dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/hint_text_color"/>
    </LinearLayout>

</ScrollView>
